Updated TODO list

--- a/python/AuditoryNeuralEncoder.ipynb
+++ b/python/AuditoryNeuralEncoder.ipynb
@@ -1525,6 +1525,13 @@
     "# Compute DSTRF average from jackknifed data\n",
     "dstrf_mean = dstrf_jk.mean(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Port nonlinearity calculation code from Matlab to Python."
+   ]
   }
  ],
  "metadata": {
