Minor bug fixes

--- a/Demo-Validate.ipynb
+++ b/Demo-Validate.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -574,29 +574,36 @@
     "model = builder().to(device)\n",
     "\n",
     "scores1 = dynamic_strf.modeling.test_multiple(\n",
-    "    model=builder(),\n",
+    "    model=model,\n",
     "    checkpoints='5x128-jackknife-cv',\n",
     "    data=(x_noisy[:1], y_noisy[:1]),\n",
     "    crossval=True,\n",
-    "    jackknife=True,\n",
     "    jackknife_mode='score',\n",
     "    verbose=0,\n",
     ")[0]\n",
     "\n",
     "scores2 = dynamic_strf.modeling.test_multiple(\n",
-    "    model=builder(),\n",
+    "    model=model,\n",
     "    checkpoints='5x128-jackknife-cv',\n",
     "    data=(x_noisy[:1], y_noisy[:1]),\n",
     "    crossval=True,\n",
-    "    jackknife=True,\n",
     "    jackknife_mode='pred',\n",
     "    verbose=0\n",
+    ")[0]\n",
+    "\n",
+    "preds = dynamic_strf.modeling.infer_multiple(\n",
+    "    model=model,\n",
+    "    checkpoints='5x128-jackknife-cv',\n",
+    "    data=x_noisy[:1],\n",
+    "    crossval=True,\n",
+    "    jackknife_mode='pred',\n",
+    "    verbose=0,\n",
     ")[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
