Cleaned up demo notebooks

--- a/Demo-Crossval.ipynb
+++ b/Demo-Crossval.ipynb
@@ -48,11 +48,8 @@
     "x_noisy = []\n",
     "for i in range(19):\n",
     "    sound, in_sr = torchaudio.load(f'Data/Sounds/stim{i+1}.flac')\n",
-    "    spect = torch.nn.Sequential(\n",
-    "        torchaudio.transforms.MelSpectrogram(in_sr, n_fft=1024, hop_length=int(in_sr/out_sr), f_min=20, f_max=11025/2, n_mels=freqbins, power=2.0),\n",
-    "        torchaudio.transforms.AmplitudeToDB('power', top_db=top_db),\n",
-    "        type(\"Squeeze\", (torch.nn.Module,), dict(forward=lambda self, x: x.squeeze(0).T.float()))()\n",
-    "        #type(\"Normalize\", (torch.nn.Module,), dict(forward=lambda self, x: (x - x.max()).squeeze(0).T.float() / top_db + 1))()\n",
+    "    spect = dynamic_strf.modeling.SpectrogramParser(\n",
+    "        in_sr, out_sr, freqbins, f_max=11025/2, normalize=False\n",
     "    )(sound)\n",
     "    x_noisy.append(spect)\n",
     "\n",
@@ -315,14 +312,14 @@
      "data": {
       "text/html": [
        "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"58\" value=\"30\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>52%</strong></span>\n",
-       "<span class=\"Iteration-label\">30/58</span>\n",
-       "<span class=\"Time-label\">[14:44<00:30, 29.47s/it]</span></div>"
+       "<progress style=\"width:60ex\" max=\"58\" value=\"55\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>95%</strong></span>\n",
+       "<span class=\"Iteration-label\">55/58</span>\n",
+       "<span class=\"Time-label\">[27:04<00:29, 29.53s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [███████████████████████████████#############################] 30/58 [14:44<00:30, 29.47s/it]"
+       " [████████████████████████████████████████████████████████####] 55/58 [27:04<00:29, 29.53s/it]"
       ]
      },
      "metadata": {},
