--- a/Demo-Validate.ipynb
+++ b/Demo-Validate.ipynb
@@ -48,11 +48,8 @@
     "x_noisy = []\n",
     "for i in range(19):\n",
     "    sound, in_sr = torchaudio.load(f'Data/Sounds/stim{i+1}.flac')\n",
-    "    spect = torch.nn.Sequential(\n",
-    "        torchaudio.transforms.MelSpectrogram(in_sr, n_fft=1024, hop_length=int(in_sr/out_sr), f_min=20, f_max=11025/2, n_mels=freqbins, power=2.0),\n",
-    "        torchaudio.transforms.AmplitudeToDB('power', top_db=top_db),\n",
-    "        type(\"Squeeze\", (torch.nn.Module,), dict(forward=lambda self, x: x.squeeze(0).T.float()))()\n",
-    "        #type(\"Normalize\", (torch.nn.Module,), dict(forward=lambda self, x: (x - x.max()).squeeze(0).T.float() / top_db + 1))()\n",
+    "    spect = dynamic_strf.modeling.SpectrogramParser(\n",
+    "        in_sr, out_sr, freqbins, f_max=11025/2, normalize=False\n",
     "    )(sound)\n",
     "    x_noisy.append(spect)\n",
     "\n",
@@ -212,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
