Add a basic linear STRF to models

--- a/Demo-Jackknife.ipynb
+++ b/Demo-Jackknife.ipynb
@@ -128,7 +128,10 @@
       "Fitting model for leave out: [2, 10]... Done.\n",
       "Fitting model for leave out: [2, 11]... Done.\n",
       "Fitting model for leave out: [2, 12]... Done.\n",
-      "Fitting model for leave out: [2, 13]... "
+      "Fitting model for leave out: [2, 13]... Done.\n",
+      "Fitting model for leave out: [2, 14]... Done.\n",
+      "Fitting model for leave out: [2, 15]... Done.\n",
+      "Fitting model for leave out: [2, 16]... "
      ]
     }
    ],
