--- a/Demo-Validate.ipynb
+++ b/Demo-Validate.ipynb
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "def builder():\n",
-    "    return dynamic_strf.modeling.SharedEncoder(\n",
+    "    return dynamic_strf.modeling.DeepEncoder(\n",
     "        input_size=freqbins,\n",
     "        hidden_size=128,\n",
     "        channels=channels\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
