--- a/Demo-Crossval.ipynb
+++ b/Demo-Crossval.ipynb
@@ -312,14 +312,64 @@
      "data": {
       "text/html": [
        "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"58\" value=\"55\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>95%</strong></span>\n",
-       "<span class=\"Iteration-label\">55/58</span>\n",
-       "<span class=\"Time-label\">[27:04<00:29, 29.53s/it]</span></div>"
+       "<progress style=\"width:60ex\" max=\"58\" value=\"58\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
+       "<span class=\"Iteration-label\">58/58</span>\n",
+       "<span class=\"Time-label\">[28:19<00:16, 29.30s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [████████████████████████████████████████████████████████####] 55/58 [27:04<00:29, 29.53s/it]"
+       " [████████████████████████████████████████████████████████████] 58/58 [28:19<00:16, 29.30s/it]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Computing dSTRFs for stimulus 10/18... "
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
+       "<progress style=\"width:60ex\" max=\"55\" value=\"55\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>100%</strong></span>\n",
+       "<span class=\"Iteration-label\">55/55</span>\n",
+       "<span class=\"Time-label\">[26:53<00:21, 29.32s/it]</span></div>"
+      ],
+      "text/plain": [
+       "\u001b[A\u001b[2K\r",
+       " [████████████████████████████████████████████████████████████] 55/55 [26:53<00:21, 29.32s/it]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Computing dSTRFs for stimulus 11/18... "
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
+       "<progress style=\"width:60ex\" max=\"86\" value=\"34\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>40%</strong></span>\n",
+       "<span class=\"Iteration-label\">34/86</span>\n",
+       "<span class=\"Time-label\">[16:39<00:29, 29.37s/it]</span></div>"
+      ],
+      "text/plain": [
+       "\u001b[A\u001b[2K\r",
+       " [███████████████████████#####################################] 34/86 [16:39<00:29, 29.37s/it]"
       ]
      },
      "metadata": {},
