Add a basic linear STRF to models

--- a/Demo-Jackknife.ipynb
+++ b/Demo-Jackknife.ipynb
@@ -137,7 +137,7 @@
    ],
    "source": [
     "def builder():\n",
-    "    return dynamic_strf.modeling.SharedEncoder(\n",
+    "    return dynamic_strf.modeling.DeepEncoder(\n",
     "        input_size=freqbins,\n",
     "        hidden_size=128,\n",
     "        channels=channels\n",
