--- a/Demo-Crossval.ipynb
+++ b/Demo-Crossval.ipynb
@@ -362,14 +362,14 @@
      "data": {
       "text/html": [
        "<div><span class=\"Text-label\" style=\"display:inline-block; overflow:hidden; white-space:nowrap; text-overflow:ellipsis; min-width:0; max-width:15ex; vertical-align:middle; text-align:right\"></span>\n",
-       "<progress style=\"width:60ex\" max=\"86\" value=\"34\" class=\"Progress-main\"/></progress>\n",
-       "<span class=\"Progress-label\"><strong>40%</strong></span>\n",
-       "<span class=\"Iteration-label\">34/86</span>\n",
-       "<span class=\"Time-label\">[16:39<00:29, 29.37s/it]</span></div>"
+       "<progress style=\"width:60ex\" max=\"86\" value=\"43\" class=\"Progress-main\"/></progress>\n",
+       "<span class=\"Progress-label\"><strong>50%</strong></span>\n",
+       "<span class=\"Iteration-label\">43/86</span>\n",
+       "<span class=\"Time-label\">[21:03<00:29, 29.36s/it]</span></div>"
       ],
       "text/plain": [
        "\u001b[A\u001b[2K\r",
-       " [███████████████████████#####################################] 34/86 [16:39<00:29, 29.37s/it]"
+       " [██████████████████████████████##############################] 43/86 [21:03<00:29, 29.36s/it]"
       ]
      },
      "metadata": {},
@@ -378,7 +378,7 @@
    ],
    "source": [
     "def builder():\n",
-    "    return dynamic_strf.modeling.SharedEncoder(\n",
+    "    return dynamic_strf.modeling.DeepEncoder(\n",
     "        input_size=freqbins,\n",
     "        hidden_size=128,\n",
     "        channels=channels\n",
