Add feature to make dSTRF movies

--- a/Examples/Example.ipynb
+++ b/Examples/Example.ipynb
@@ -471,6 +471,46 @@
     "    verbose=0\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing dSTRFs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dynamic_strf.visualize.dSTRF(\n",
+    "    'output/5x128-jackknife-cv-dstrf/dSTRF-000.pt',\n",
+    "    channels=slice(8, 12),\n",
+    "    time_range=slice(1000, 2500),\n",
+    "    aspect=2,\n",
+    "    output_prefix='mov/trial-1-',\n",
+    "    verbose=2\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
