--- a/Examples/Tutorial.ipynb
+++ b/Examples/Tutorial.ipynb
@@ -697,6 +697,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an example video from the same channel and time range, for the masked dSTRFs ($q=0.75$) calculated above:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
